--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -16,5 +16,6 @@
         <item name="android:windowBackground">@android:color/white</item>
     </style>
     <color name="red">#FF0000</color>
-    <color name="buttonColor">#BFBA9F</color>
+    <color name="buttonColor">#d3d4cf</color>
+    <!-- <color name="buttonColor">#BFBA9F</color> -->
 </resources>
